# haskell-gi

./: #README.md#  .#README.md  .editorconfig  .gitgnore  .gitignore  .gitmodules  .hlint.yaml  .travis.yml  ChangeLog.md  DocTests.hs  Dump.hs  GObject-Introspection.cabal  Gtk3.cabal.project  Gtk4.cabal.project  LICENSE  README.md  Setup.hs  TODO.md  appveyor.yml  bootstrap.sh  cabal.project  cairo-gtk2hs.h  cairo.cabal  default.nix  gi-cairo-render.cabal  gi-gtk-hs.cabal  gobject-introspection.cabal  haskell-gi-base.cabal  haskell-gi.cabal  haskell-gi.hs  hlabyrinth.cabal  osx.cabal.project  package.yaml  release.nix  shell.nix  stack-nix.yaml  stack.yaml  test.hs  update-cabal-project.sh
bindings/: .gitignore  AllPKGS.sh  GTK4-PKGS.sh  Nullable.xslt  OSX-PKGS.sh  PKGS  PKGS.sh  ProjectInfo.hs  README.md  TravisPKGS.sh  build-tools.cabal  buildAll.sh  bumpMinor.hs  cabal.project  cleanAll.sh  dumpAll.sh  extractDescriptions.hs  genBindings.sh  genBuildInfo.hs  mkSDists.sh  newBuildTravis.sh  upload.sh  uploadDocs.sh
bindings/Adw/: Adw.overrides  ChangeLog.md  pkg.info
bindings/Atk/: Atk.cabal  Atk.overrides  ChangeLog.md  Setup.hs  gi-atk.cabal  pkg.info
bindings/AyatanaAppIndicator3/: AyatanaAppIndicator3.overrides  ChangeLog.md  pkg.info
bindings/Clutter/: ChangeLog.md  Clutter.overrides  pkg.info
bindings/Cogl/: ChangeLog.md  Cogl.overrides  pkg.info
bindings/CoglPango/: ChangeLog.md  CoglPango.overrides  pkg.info
bindings/Dazzle/: ChangeLog.md  Dazzle.overrides  pkg.info
bindings/Dbusmenu/: ChangeLog.md  Dbusmenu.overrides  pkg.info
bindings/DbusmenuGtk3/: ChangeLog.md  DbusmenuGtk3.overrides  pkg.info
bindings/GES/: ChangeLog.md  pkg.info
bindings/GIRepository/: ChangeLog.md  GIRepository.overrides  gi-girepository.cabal  pkg.info
bindings/GLib/: ChangeLog.md  GLib.cabal  GLib.overrides  Setup.hs  gi-glib.cabal  pkg.info
bindings/GModule/: ChangeLog.md  pkg.info
bindings/GObject/: ChangeLog.md  GObject.cabal  GObject.overrides  Setup.hs  gi-gobject.cabal  pkg.info
bindings/Gdk/: ChangeLog.md  Gdk.cabal  Gdk.overrides  Setup.hs  gi-gdk.cabal  pkg.info
bindings/Gdk-3.0/: ChangeLog.md  Gdk.overrides  pkg.info
bindings/Gdk-4.0/: ChangeLog.md  Gdk.overrides  pkg.info
bindings/GdkPixbuf/: ChangeLog.md  GdkPixbuf.cabal  GdkPixbuf.overrides  Setup.hs  gi-gdkpixbuf.cabal  pkg.info
bindings/GdkX11/: ChangeLog.md  pkg.info
bindings/GdkX11-3.0/: ChangeLog.md  pkg.info
bindings/GdkX11-4.0/: ChangeLog.md  GdkX11.overrides  pkg.info
bindings/Ggit/: ChangeLog.md  Ggit.overrides  pkg.info
bindings/Gio/: ChangeLog.md  Gio.cabal  Gio.overrides  Setup.hs  gi-gio.cabal  pkg.info
bindings/Graphene/: ChangeLog.md  pkg.info
bindings/Gsk/: ChangeLog.md  pkg.info
bindings/Gst/: ChangeLog.md  Gst.overrides  gi-gst.cabal  pkg.info
bindings/GstApp/: ChangeLog.md  GstApp.overrides  pkg.info
bindings/GstAudio/: ChangeLog.md  GstAudio.overrides  gi-gstaudio.cabal  pkg.info
bindings/GstBase/: ChangeLog.md  GstBase.overrides  Setup.hs  gi-gstbase.cabal  pkg.info
bindings/GstPbutils/: ChangeLog.md  GstPbutils.overrides  pkg.info
bindings/GstTag/: ChangeLog.md  GstTag.overrides  pkg.info
bindings/GstVideo/: ChangeLog.md  GstVideo.overrides  Setup.hs  gi-gstvideo.cabal  pkg.info
bindings/Gtk/: ChangeLog.md  Gtk.cabal  Gtk.overrides  gi-gtk.cabal  pkg.info
bindings/Gtk-3.0/: ChangeLog.md  Gtk.overrides  pkg.info
bindings/Gtk-4.0/: ChangeLog.md  Gtk.overrides  pkg.info
bindings/Gtk4LayerShell/: ChangeLog.md  Gtk4LayerShell.overrides  pkg.info
bindings/GtkLayerShell/: ChangeLog.md  GtkLayerShell.overrides  pkg.info
bindings/GtkSheet/: ChangeLog.md  GtkSheet.overrides  pkg.info
bindings/GtkSource/: ChangeLog.md  GtkSource.overrides  gi-gtksource.cabal  pkg.info
bindings/GtkSource-3.0/: ChangeLog.md  pkg.info
bindings/GtkSource-5/: ChangeLog.md  GtkSource.overrides  pkg.info
bindings/GtkSource-5.0/: ChangeLog.md  GtkSource.overrides  pkg.info
bindings/GtkosxApplication/: ChangeLog.md  GtkosxApplication.overrides  Setup.hs  gi-gtkosxapplication.cabal  pkg.info
bindings/Handy/: ChangeLog.md  Handy.overrides  pkg.info
bindings/HarfBuzz/: ChangeLog.md  HarfBuzz.overrides  pkg.info
bindings/IBus/: ChangeLog.md  pkg.info
bindings/JavaScriptCore/: JavaScriptCore.overrides
bindings/JavaScriptCore-3.0/: Setup.hs  gi-javascriptcore.cabal  pkg.info
bindings/JavaScriptCore-4.0/: ChangeLog.md  Setup.hs  gi-javascriptcore.cabal  pkg.info
bindings/JavaScriptCore-5.0/: pkg.info
bindings/JavaScriptCore-6.0/: ChangeLog.md  pkg.info
bindings/Json/: ChangeLog.md  Json.overrides  pkg.info
bindings/Keybinder/: ChangeLog.md  pkg.info
bindings/NM/: ChangeLog.md  pkg.info
bindings/Notify/: ChangeLog.md  Notify.cabal  Notify.overrides  Setup.hs  gi-notify.cabal  pkg.info
bindings/OSTree/: ChangeLog.md  OSTree.overrides  pkg.info
bindings/Pango/: ChangeLog.md  Pango.cabal  Pango.overrides  Setup.hs  gi-pango.cabal  pkg.info
bindings/PangoCairo/: ChangeLog.md  PangoCairo.overrides  Setup.hs  gi-pangocairo.cabal  pkg.info
bindings/Poppler/: ChangeLog.md  Poppler.overrides  Setup.hs  gi-poppler.cabal  pkg.info
bindings/RSVG/: ChangeLog.md  RSVG.overrides  pkg.info
bindings/Rsvg/: ChangeLog.md  pkg.info
cairo/: .gitignore  .gitmodules  ChangeLog.md  README.md  cabal.project  gi-cairo.cabal  shell.nix  stack.yaml
cmdline/: haskell-gi-cmd.cabal  haskell-gi.hs
declarative-gtk/: CHANGELOG.md  declarative-gtk.cabal
examples/: Cairo.hs  Examples.cabal  GstGtkX11.hs  GstHelloWorld.hs  GtkEmitSignal.hs  README.md  SimpleBrowser.hs  haskell-gi-examples.cabal  runexamples.sh
gi-cairo-connector/: default.nix  gi-cairo-connector.cabal
gi-gtk-hs/: gi-gtk-hs.cabal
overloading/: ChangeLog.md  LICENSE  README.md  haskell-gi-overloading.cabal
test/: .gitignore  Atk.config  GLib.config  GObject.config  Gdk.overrides  GdkPixbuf.config  Gio.config  Gtk.config  Gtk.overrides  Pango.config  bootstrap.sh  build.sh  cabal.config  haskell-gi-test.cabal  hsgclosure.c  hsgclosure.h  runtest.sh  template-hsc.h  testGtk.cabal  testGtk.hs
(+650 files in other folders)
