Name:                GObject-Introspection
Version:             0.7
Synopsis:            Generate Haskell bindings for GObject-Introspection capable libraries
Description:         Generate Haskell bindings for GObject-Introspection capable libraries. This includes most notably Gtk+, but many other libraries in the GObject ecosystem provide introspection data too.
Homepage:            https://github.com/garetxe/haskell-gi
License:             LGPL-3
License-file:        LICENSE
Author:              Will Thompson,
                     Iñaki García Etxebarria,
                     Jonas Platte
Maintainer:          Iñaki García Etxebarria (garetxe@gmail.com)
Stability:           Experimental
Category:            Development
Build-type:          Simple
Cabal-version:       >=1.8

source-repository head
  type: git
  location: git://github.com/garetxe/haskell-gi.git

Executable haskell-gi
  main-is: haskell-gi.hs
  pkgconfig-depends: gobject-introspection-1.0 >= 1.42, gobject-2.0 >= 2.36
  build-depends:
      base >= 4.7 && < 5,
      bytestring,
      containers,
      directory,
      filepath,
      free,
      mtl >= 2.2,
      pretty-show,
      process,
      safe,
      text >= 1.0,
      transformers >= 0.3,
      xdg-basedir,
      xml-conduit >= 1.3.0,
      unix >= 2.7 && <2.8,
      GObject-Introspection
  build-tools: hsc2hs, c2hs
  extensions: CPP, ForeignFunctionInterface, DoAndIfThenElse, LambdaCase, RankNTypes
  ghc-options: -Wall -fno-warn-missing-signatures -fwarn-incomplete-patterns -fno-warn-name-shadowing
  other-modules:
      GI.GIR.Alias,
      GI.GIR.BasicTypes,
      GI.GIR.Callback,
      GI.GIR.Constant,
      GI.GIR.Deprecation,
      GI.GIR.Enum,
      GI.GIR.Field,
      GI.GIR.Flags,
      GI.GIR.Method,
      GI.GIR.Object,
      GI.GIR.Parser,
      GI.GIR.Repository,
      GI.GIR.Signal,
      GI.GIR.Struct,
      GI.GIR.Type,
      GI.GIR.Union,
      GI.GIR.XMLUtils,
      GI.API,
      GI.Attributes,
      GI.Cabal,
      GI.Callable,
      GI.Code,
      GI.Config,
      GI.Constant,
      GI.Conversions,
      GI.DynLib,
      GI.GObject,
      GI.GType,
      GI.Inheritable,
      GI.OverloadedSignals,
      GI.Overrides,
      GI.PkgConfig,
      GI.ProjectInfo,
      GI.Properties,
      GI.Signal,
      GI.Struct,
      GI.SymbolNaming,
      GI.Transfer,
      GI.Type,
      GI.Util

  c-sources: c/enumStorage.c

Library
  exposed-modules:
      GI.Utils.Attributes,
      GI.Utils.Base,
      GI.Utils.BasicConversions,
      GI.Utils.BasicTypes,
      GI.Utils.Closure,
      GI.Utils.GError,
      GI.Utils.GHashTable,
      GI.Utils.GValue,
      GI.Utils.GVariant,
      GI.Utils.ManagedPtr,
      GI.Utils.GParamSpec,
      GI.Utils.Properties,
      GI.Utils.ShortPrelude,
      GI.Utils.Signals,
      GI.Utils.Utils
  pkgconfig-depends: gobject-introspection-1.0, gobject-2.0 >= 2.36
  build-depends:
      base >= 4 && < 5,
      bytestring,
      containers,
      text >= 1.0
  build-tools: hsc2hs
  extensions: CPP, ForeignFunctionInterface, DoAndIfThenElse
  ghc-options: -Wall -fno-warn-missing-signatures -fwarn-incomplete-patterns -fno-warn-name-shadowing

  C-sources: c/hsgclosure.c
