name:                GObject-Introspection
version:             0.7
synopsis:            Generate Haskell bindings for GObject-Introspection capable libraries
description:         Generate Haskell bindings for GObject-Introspection capable libraries. This includes most notably Gtk+, but many other libraries in the GObject ecosystem provide introspection data too.
homepage:            https://github.com/garetxe/haskell-gi
license:             LGPL-3
license-file:        LICENSE
author:              Will Thompson,
                     Iñaki García Etxebarria,
                     Jonas Platte
maintainer:          Iñaki García Etxebarria (garetxe@gmail.com)
stability:           Experimental
category:            Development
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type: git
  location: git://github.com/garetxe/haskell-gi.git

executable haskell-gi
  main-is:             haskell-gi.hs
  pkgconfig-depends:   gobject-introspection-1.0 >= 1.42, gobject-2.0 >= 2.36
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       directory,
                       filepath,
                       mtl >= 2.2,
                       transformers >= 0.3,
                       pretty-show,
                       process,
                       safe,
                       bytestring,
                       xdg-basedir,
                       xml-conduit >= 1.3.0,
                       GObject-Introspection,
                       text >= 1.0,
                       free

  build-tools:         hsc2hs, c2hs
  hs-source-dirs:      src
  other-modules:       GI.GIR.Alias,
                       GI.GIR.BasicTypes,
                       GI.GIR.Callback,
                       GI.GIR.Constant,
                       GI.GIR.Deprecation,
                       GI.GIR.Enum,
                       GI.GIR.Field,
                       GI.GIR.Flags,
                       GI.GIR.Method,
                       GI.GIR.Object,
                       GI.GIR.Parser,
                       GI.GIR.Repository,
                       GI.GIR.Signal,
                       GI.GIR.Struct,
                       GI.GIR.Type,
                       GI.GIR.Union,
                       GI.GIR.XMLUtils,
                       GI.API,
                       GI.Attributes,
                       GI.Cabal,
                       GI.Callable,
                       GI.Code,
                       GI.Config,
                       GI.Constant,
                       GI.Conversions,
                       GI.GObject,
                       GI.GType,
                       GI.Inheritance,
                       GI.OverloadedSignals,
                       GI.Overrides,
                       GI.PkgConfig,
                       GI.ProjectInfo,
                       GI.Properties,
                       GI.LibGIRepository,
                       GI.Signal,
                       GI.Struct,
                       GI.SymbolNaming,
                       GI.Transfer,
                       GI.Type,
                       GI.Util

  extensions:          CPP, ForeignFunctionInterface, DoAndIfThenElse, LambdaCase, RankNTypes, OverloadedStrings
  ghc-options:         -Wall -fno-warn-missing-signatures -fwarn-incomplete-patterns -fno-warn-name-shadowing
  c-sources:           src/c/enumStorage.c

library
  hs-source-dirs:      src
  exposed-modules:     Data.GI.Base,
                       Data.GI.Base.Attributes,
                       Data.GI.Base.BasicConversions,
                       Data.GI.Base.BasicTypes,
                       Data.GI.Base.Closure,
                       Data.GI.Base.GError,
                       Data.GI.Base.GHashTable,
                       Data.GI.Base.GValue,
                       Data.GI.Base.GVariant,
                       Data.GI.Base.ManagedPtr,
                       Data.GI.Base.GParamSpec,
                       Data.GI.Base.Overloading,
                       Data.GI.Base.Properties,
                       Data.GI.Base.ShortPrelude,
                       Data.GI.Base.Signals,
                       Data.GI.Base.Utils

  pkgconfig-depends:   gobject-introspection-1.0, gobject-2.0 >= 2.36
  build-depends:       base >= 4 && < 5,
                       bytestring,
                       containers,
                       text >= 1.0

  build-tools:         hsc2hs
  extensions:          CPP, ForeignFunctionInterface, DoAndIfThenElse
  ghc-options:         -Wall -fno-warn-missing-signatures -fwarn-incomplete-patterns -fno-warn-name-shadowing
  c-sources:           src/c/hsgclosure.c
