name:                gi-gtk-hs
version:             0.1.0.0
synopsis:            A wrapper for gi-gtk, adding a few more idiomatic API parts on top
description:         A wrapper for gi-gtk, adding a few more idiomatic API parts on top
homepage:            https://github.com/haskell-gi/gi-gtk-hs
license:             LGPL-2.1
license-file:        LICENSE
author:              Jonas Platte
maintainer:          mail@jonasplatte.de
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.GI.Gtk,
                       Data.GI.Gtk.BuildFn

  build-depends:       base >=4.8 && <4.9,
                       mtl >=2.2 && <2.3,
                       text >=1.2 && <1.3,
                       gi-gtk >=0.3.10 && <0.4,
                       haskell-gi-base >=0.9 && <1

  hs-source-dirs:      src
  default-language:    Haskell2010
