name:                gi-gtk-hs
version:             0.1.0.0
synopsis:            A wrapper for gi-gtk, adding a few more idiomatic API parts on top
description:         A wrapper for gi-gtk, adding a few more idiomatic API parts on top
homepage:            https://github.com/haskell-gi/gi-gtk-hs
license:             LGPL-2.1
license-file:        LICENSE
author:              Jonas Platte
maintainer:          mail@jonasplatte.de
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.GI.Gtk,
                       Data.GI.Gtk.BuildFn
                       Data.GI.Gtk.ModelView.Types
                       Data.GI.Gtk.ModelView.CellLayout
                       Data.GI.Gtk.ModelView.CustomStore
                       Data.GI.Gtk.ModelView.ListStore
                       Data.GI.Gtk.ModelView.TreeStore
                       Data.GI.Gtk.ModelView.TreeModel
                       Data.GI.Gtk.ComboBox

  build-depends:       base >=4.8 && <4.9,
                       mtl >=2.2 && <2.3,
                       text >=1.2 && <1.3,
                       haskell-gi-base >=0.13 && <0.14,
                       gi-glib >=0.2.44 && <0.2.47,
                       gi-gobject >=0.2.44 && <0.2.47,
                       gi-gdk >=0.3.16 && <0.3.19,
                       gi-gtk >=0.3.16 && <0.3.19,
                       gi-gdkpixbuf >=0.2.31 && <0.2.33

  hs-source-dirs:      src
  default-language:    Haskell2010
