name:                haskell-gi
version:             0.8
synopsis:            Generate Haskell bindings for GObject Introspection capable libraries
description:         Generate Haskell bindings for GObject Introspection capable libraries. This includes most notably
                     Gtk+, but many other libraries in the GObject ecosystem provide introspection data too.
homepage:            https://github.com/haskell-gi/haskell-gi
license:             LGPL-3
license-file:        LICENSE
author:              Will Thompson,
                     Iñaki García Etxebarria,
                     Jonas Platte
maintainer:          Iñaki García Etxebarria (garetxe@gmail.com)
stability:           Experimental
category:            Development
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type: git
  location: git://github.com/haskell-gi/haskell-gi.git

executable haskell-gi
  main-is:             haskell-gi.hs
  pkgconfig-depends:   gobject-introspection-1.0 >= 1.42, gobject-2.0 >= 2.36
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       directory,
                       filepath,
                       mtl >= 2.2,
                       transformers >= 0.3,
                       pretty-show,
                       process,
                       safe,
                       bytestring,
                       xdg-basedir,
                       xml-conduit >= 1.3.0,
                       gobject-introspection,
                       text >= 1.0,
                       free

  build-tools:         hsc2hs, c2hs
  hs-source-dirs:      src
  other-modules:       GI.GIR.Alias,
                       GI.GIR.BasicTypes,
                       GI.GIR.Callback,
                       GI.GIR.Constant,
                       GI.GIR.Deprecation,
                       GI.GIR.Enum,
                       GI.GIR.Field,
                       GI.GIR.Flags,
                       GI.GIR.Method,
                       GI.GIR.Object,
                       GI.GIR.Parser,
                       GI.GIR.Repository,
                       GI.GIR.Signal,
                       GI.GIR.Struct,
                       GI.GIR.Type,
                       GI.GIR.Union,
                       GI.GIR.XMLUtils,
                       GI.API,
                       GI.Attributes,
                       GI.Cabal,
                       GI.Callable,
                       GI.Code,
                       GI.Config,
                       GI.Constant,
                       GI.Conversions,
                       GI.GObject,
                       GI.GType,
                       GI.Inheritance,
                       GI.OverloadedSignals,
                       GI.Overrides,
                       GI.PkgConfig,
                       GI.ProjectInfo,
                       GI.Properties,
                       GI.LibGIRepository,
                       GI.Signal,
                       GI.Struct,
                       GI.SymbolNaming,
                       GI.Transfer,
                       GI.Type,
                       GI.Util

  extensions:          CPP, ForeignFunctionInterface, DoAndIfThenElse, LambdaCase, RankNTypes, OverloadedStrings
  ghc-options:         -Wall -fno-warn-missing-signatures -fwarn-incomplete-patterns -fno-warn-name-shadowing
  c-sources:           src/c/enumStorage.c
