name:                haskell-gi
version:             0.20
synopsis:            Generate Haskell bindings for GObject Introspection capable libraries
description:         Generate Haskell bindings for GObject Introspection capable libraries. This includes most notably
                     Gtk+, but many other libraries in the GObject ecosystem provide introspection data too.
homepage:            https://github.com/haskell-gi/haskell-gi
license:             LGPL-2.1
                     -- or above
license-file:        LICENSE
author:              Will Thompson,
                     Iñaki García Etxebarria,
                     Jonas Platte
maintainer:          Iñaki García Etxebarria (garetxe@gmail.com)
stability:           Experimental
category:            Development
build-type:          Simple
tested-with:         GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1
cabal-version:       >=1.8

source-repository head
  type: git
  location: git://github.com/haskell-gi/haskell-gi.git

Library
  pkgconfig-depends:   gobject-introspection-1.0 >= 1.32, gobject-2.0 >= 2.32
  build-depends:       base >= 4.7 && < 5,
                       haskell-gi-base == 0.20.*,
                       Cabal >= 1.20,
                       containers,
                       directory,
                       filepath,
                       mtl >= 2.2,
                       transformers >= 0.3,
                       pretty-show,
                       process,
                       safe,
                       bytestring,
                       xdg-basedir,
                       xml-conduit >= 1.3.0,
                       regex-tdfa >= 1.2,
                       text >= 1.0

  extensions:          CPP, ForeignFunctionInterface, DoAndIfThenElse, LambdaCase, RankNTypes, OverloadedStrings
  ghc-options:         -Wall -fno-warn-missing-signatures -fwarn-incomplete-patterns -fno-warn-name-shadowing
  c-sources:           lib/c/enumStorage.c

  build-tools:         hsc2hs
  hs-source-dirs:      lib
  exposed-modules:     Data.GI.GIR.Alias,
                       Data.GI.GIR.Allocation,
                       Data.GI.GIR.Arg,
                       Data.GI.GIR.BasicTypes,
                       Data.GI.GIR.Callable,
                       Data.GI.GIR.Callback,
                       Data.GI.GIR.Constant,
                       Data.GI.GIR.Deprecation,
                       Data.GI.GIR.Documentation,
                       Data.GI.GIR.Enum,
                       Data.GI.GIR.Field,
                       Data.GI.GIR.Flags,
                       Data.GI.GIR.Function,
                       Data.GI.GIR.Interface,
                       Data.GI.GIR.Method,
                       Data.GI.GIR.Object,
                       Data.GI.GIR.Parser,
                       Data.GI.GIR.Property,
                       Data.GI.GIR.Repository,
                       Data.GI.GIR.Signal,
                       Data.GI.GIR.Struct,
                       Data.GI.GIR.Type,
                       Data.GI.GIR.Union,
                       Data.GI.GIR.XMLUtils,
                       Data.GI.CodeGen.API,
                       Data.GI.CodeGen.Cabal,
                       Data.GI.CodeGen.CabalHooks,
                       Data.GI.CodeGen.Callable,
                       Data.GI.CodeGen.Code,
                       Data.GI.CodeGen.CodeGen,
                       Data.GI.CodeGen.Config,
                       Data.GI.CodeGen.Constant,
                       Data.GI.CodeGen.Conversions,
                       Data.GI.CodeGen.EnumFlags,
                       Data.GI.CodeGen.Fixups,
                       Data.GI.CodeGen.GObject,
                       Data.GI.CodeGen.GType,
                       Data.GI.CodeGen.Inheritance,
                       Data.GI.CodeGen.LibGIRepository,
                       Data.GI.CodeGen.OverloadedSignals,
                       Data.GI.CodeGen.OverloadedLabels,
                       Data.GI.CodeGen.OverloadedMethods,
                       Data.GI.CodeGen.Overrides,
                       Data.GI.CodeGen.PkgConfig,
                       Data.GI.CodeGen.ProjectInfo,
                       Data.GI.CodeGen.Properties,
                       Data.GI.CodeGen.Signal,
                       Data.GI.CodeGen.Struct,
                       Data.GI.CodeGen.SymbolNaming,
                       Data.GI.CodeGen.Transfer,
                       Data.GI.CodeGen.Type,
                       Data.GI.CodeGen.Util

  other-modules:       Paths_haskell_gi

executable haskell-gi
  main-is:             haskell-gi.hs
  hs-source-dirs:      cmdline

  extensions:          CPP, OverloadedStrings, LambdaCase
  ghc-options:         -Wall -fno-warn-name-shadowing

  build-depends:       base >= 4.7 && < 5,
                       text >= 1.0,
                       filepath,
                       containers,
                       directory,
                       pretty-show,
                       haskell-gi,
                       haskell-gi-base
